refactor: separate the DTOs for semesters